--- a/blog.html
+++ b/blog.html
@@ -39,27 +39,27 @@
 <span> 31 December 2023 / Graphics Design </span>
                        <a href="blog1.html" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
-                        <a href="#"> Read More </a>
+                        <a href="blog1.html"> Read More </a>
                 </div></div>
                     <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog2.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
-<span> 31 December 2023 / Graphics Design </span>
-                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
-<p> Graphics design</p>
-                        <a href="#"> Read More </a>
+<span> 31 December 2023 / Artificial Intelligence(AI)</span>
+                       <a href="blog2.html" class="blog-title">What impact will advancements in artificial intelligence have on jobs and the future of work?</a> 
+<p> Artificial Intelligence (AI)</p>
+                        <a href="blog2.html"> Read More </a>
                     </div></div>
                         <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog3.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
-<span> 31 December 2023 / Graphics Design </span>
-                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
-<p> Graphics design</p>
-                        <a href="#"> Read More </a>
+<span> 31 December 2023 / Database</span>
+                       <a href="blog3.html" class="blog-title">How can businesses optimize database performance and scalability to meet the growing demands of modern applications?</a> 
+<p> Database</p>
+                        <a href="blog3.html"> Read More </a>
                     </div></div>
                             <div class="blogitem">
                     <div class="blog-img">
@@ -67,9 +67,9 @@
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
-                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
-<p> Graphics design</p>
-                        <a href="#"> Read More </a>
+                       <a href="blog4.html" class="blog-title">How is big data reshaping industries and what challenges and opportunities does it present for businesses in the era of information abundance?</a> 
+<p> Bigdata</p>
+                        <a href="blog4.html"> Read More </a>
                     </div>
                 
             </div>
