--- a/blog1.html
+++ b/blog1.html
@@ -37,9 +37,27 @@
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
-                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
-<p> Graphics design</p>
-                        <a href="#"> Read More </a>
+                       <p class="blog-title">What has happened of all of the graphics design</p>
+                        <h2>Crafting Visual Narratives: A Glimpse into My Graphic Design Odyssey<br></h2>
+                <p><h3>Introduction: The Artistry of Graphic Design<br></h3>
+- Welcome to the world where visual storytelling takes center stage, and graphic design becomes a language of expression.<br>
+- Explore the profound impact of graphic design in conveying messages and evoking emotions.<br>
+
+<h3>The Foundations of My Design Approach<br></h3>
+- Delve into my commitment to principles like balance, contrast, alignment, and proximity.<br>
+- Share insights into the synergy between color theory and typography in shaping the visual narrative.<br>
+
+<h3>Tools I Weave Magic With<br></h3>
+- Unveil the palette of graphic design software and tools I wield in my creative process.<br>
+- Explain how each tool contributes to the intricacies of my design work.<br>
+
+<h3>The Artistic Alchemy: My Creative Process<br></h3>
+- Walk through the stages of ideation, creation, and refinement in my design process.<br>
+- Narrate the stories behind some of my favorite projects, showcasing the evolution of ideas to visuals.<br>
+
+<h3>Capturing the Zeitgeist: Trends in My Design Universe<br></h3>
+- Discuss the current trends that influence my design aesthetics.<br>
+- Illustrate how I balance staying on-trend while preserving a unique, timeless quality in my work.<br>
                 </div></div>
                     
                 
