--- a/blog1.html
+++ b/blog1.html
@@ -29,7 +29,7 @@
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
-            <div class="blogcontainer">
+            <div class="blog1container">
                 <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
                     <div class="blog-img">
