--- a/blog1.html
+++ b/blog1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable= no">
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blogstyle.css">
 </head>
 <body>
     <div class="container">
@@ -29,7 +29,7 @@
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
-            <div class="blog1container">
+            <div class="blogcontainer">
                 <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
                     <div class="blog-img">
