--- a/blog2.html
+++ b/blog2.html
@@ -39,7 +39,7 @@
 <span> 31 December 2023 / Artificial Intelligence(AI)</span>
                        <p class="blog-title">What impact will advancements in artificial intelligence have on jobs and the future of work?</p>
                         
-                </div></div><h2>Decoding the Wonders of Artificial Intelligence<br></h2>
+                <h2>Decoding the Wonders of Artificial Intelligence<br></h2>
                <p><h3>Introduction: The AI Revolution<br></h3>
 - In a world increasingly defined by technological advancements, Artificial Intelligence (AI) stands as a revolutionary force reshaping our daily lives.<br>
 - From smart assistants to complex algorithms, AI is becoming an integral part of our interconnected world.<br>
