--- a/blog2.html
+++ b/blog2.html
@@ -33,7 +33,7 @@
                 <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
                     <div class="blog-img">
-                        <img src="blog1.jpeg" alt="blog">
+                        <img src="blog2.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Artificial Intelligence(AI)</span>
