--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             </div>
             <div class="contactform">
                 <h1>Contact me for work/general Enquiries</h1>
-                <form>
+                <form onsubmit="sendemail(); reset(); return false;">
                     <div class="mb-3">
                       <label for="clientname" class="form-label">Name</label>
                       <input type="name" class="form-control" id="clientname" aria-describedby="emailHelp">
