--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,7 @@
             </div>
             <div class="contactform">
                 <h1>Contact me for work/general Enquiries</h1>
-                <form 
-                    action="https://formspree.io/f/xoqgqevv"
-                   method="POST"
-                    >
+                <form action="https://formspree.io/f/xoqgqevv" method="POST">
                     <div class="mb-3">
                       <label for="clientname" class="form-label">Name</label>
                       <input type="name" class="form-control" id="clientname" aria-describedby="emailHelp">
