--- a/contact.html
+++ b/contact.html
@@ -34,24 +34,24 @@
                 <form action="https://formspree.io/f/xoqgqevv" method="POST">
                     <div class="mb-3">
                       <label for="clientname" class="form-label">Name</label>
-                      <input type="name" class="form-control" id="clientname" aria-describedby="emailHelp">
+                      <input type="name" name="name" class="form-control" id="clientname" aria-describedby="emailHelp">
                     
                     </div>
                     <div class="mb-3">
                         <label for="clientemail" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="clientemail" aria-describedby="emailHelp">
+                        <input type="email" name="email"class="form-control" id="clientemail" aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">We'll never share your email & phone with anyone else.</div>
                       </div>
                     <div class="mb-3">
                       <label for="clientphone" class="form-label">Phone</label>
-                      <input type="phone" class="form-control" id="clientphone">
+                      <input type="phone" name="phone" class="form-control" id="clientphone">
                     </div>
                     <div class="mb-3">
                         <label for="clientenquiry" class="form-label">Enquiry</label>
-                        <input type="enquiry" class="form-control" id="clientenquiry" aria-describedby="emailHelp">
+                        <input type="enquiry" name="enquiry" class="form-control" id="clientenquiry" aria-describedby="emailHelp">
                       </div>
                     <div class="mb-3" id = form-check>
-                      <input type="checkbox" class="form-check-input" id="isclient">
+                      <input type="checkbox" name="checkbox" class="form-check-input" id="isclient">
                       <label class="form-check-label" for="isclient">I want you to work on a project with me</label>
                     </div>
                     
