--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
+    <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast service</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
@@ -32,12 +32,12 @@
             <div class="infocontainer">
                 <div class="devinfo">
                     <div class="hello">
-                        HI I am 
+                        HI its me
                     </div>
                     <div class="name">Saurav Khanal</div>
-                    <div class="about">Developer, Entrepreneur, Singer</div>
-                    <div class="moreabout">Hi i am a developer<br>, i love to drink milk tea. <br>I live in Jhapa, <br>i love to 
-                        <br>visit kathmandu to buy <br>technical products
+                    <div class="about">Developer, Entrepreneur, Graphics designer</div>
+                    <div class="moreabout">Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
+                    
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
                         <button class="btn">Download CV</button></a>
