--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
                         HI I am 
                     </div>
                     <div class="name">Saurav Khanal</div>
-                    <div class="about">Developer, Entrepreneur, Singer</div>
-                    <div class="moreabout">Hi i am a developer,<br> i love to drink milk tea. <br>I live in Jhapa, <br>i love to 
-                        visit <br>kathmandu to buy <br>technical products.
+                    <div class="about">Developer, Entrepreneur, Programmer</div>
+                    <div class="moreabout"> Hello Friend, Thanks for visiting my Portfolio.<br> If you are interested to know more on my background,<br> you are on the right platform.
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
                         <button class="btn">Download CV</button></a>
