--- a/intro.html
+++ b/intro.html
@@ -35,7 +35,7 @@
                 <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
                 </p>
                 <h2>My skills</h2>
-                <div class="skillcontainer"></div>
+                <!--<div class="skillcontainer"></div>
                 <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
                 <div class="skillitem">CSS:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill fifty"></div></div>
                 <div class="skillitem">javascript: <div class="skill fifty"></div></div>
@@ -49,6 +49,26 @@
                 <div class="filling-box">
     
             <!-- TODO: Create a gallery for my project -->
+                <div class="skill">
+  <p>HTML</p>
+  <div class="skill-bar">
+    <div class="fill-bar" id="htmlSkill"></div>
+  </div>
+</div>
+
+<div class="skill">
+  <p>CSS</p>
+  <div class="skill-bar">
+    <div class="fill-bar" id="cssSkill"></div>
+  </div>
+</div>
+
+<div class="skill">
+  <p>JavaScript</p>
+  <div class="skill-bar">
+    <div class="fill-bar" id="jsSkill"></div>
+  </div>
+</div>
         </div>
     </div>
     </div>
