--- a/intro.html
+++ b/intro.html
@@ -31,7 +31,7 @@
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
-            <div class="intro">
+            <!--<div class="intro">
                 <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
                 </p>
                 <h2>My skills</h2>
