--- a/intro.html
+++ b/intro.html
@@ -7,6 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    .skill-bar {
+      width: 300px;
+      height: 20px;
+      background-color: #f0f0f0;
+      margin-bottom: 10px;
+      overflow: hidden;
+    }
+
+    .fill-bar {
+      height: 100%;
+      width: 0;
+      background-color: #3498db; /* Adjust color as needed */
+      transition: width 1s ease; /* Adjust animation duration */
+    }
+    </style>
 </head>
 
 <body>
