--- a/services.html
+++ b/services.html
@@ -34,8 +34,8 @@
                     <div class="hello">
                         HI its me
                     </div>
-                    <div class="name">Saurav Khanal</div>
-                    <div class="about">Developer, Entrepreneur, Graphics designer</div>
+                    <div class="name">Saurav</div>
+                    <div class="about">Developer, Entrepreneur, Graphics Designer, Programmer</div>
                     <div class="moreabout">Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
                     
                     </div>
