--- a/services.html
+++ b/services.html
@@ -36,8 +36,8 @@
                     </div>
                     <div class="name">Saurav</div>
                     <div class="about">Developer, Entrepreneur, Graphics Designer, Programmer</div>
-                    <div class="moreabout">Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
-                    
+                    <div class="moreabout"><strong><i>Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
+                   </i> </strong>
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
                         <button class="btn">Download CV</button></a>
