--- a/services.html
+++ b/services.html
@@ -32,10 +32,10 @@
             <div class="infocontainer">
                 <div class="devinfo">
                     <div class="hello">
-                        HI its me
+                     <b>   HI its me</b>
                     </div>
                     <div class="name">Saurav</div>
-                    <div class="about">Developer, Entrepreneur, Graphics Designer, Programmer</div>
+                    <div class="about"><b>Developer, Entrepreneur, Graphics Designer, Programmer</b></div>
                     <div class="moreabout"><strong><i>Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
                    </i> </strong>
                     </div>
