--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
             <div class="port""><h2>Portfolio</h2></div>
-               <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
+               <!--<img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
@@ -44,7 +44,7 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                   <!-- <div class="devpic" id="boxx"> <img src="sauravv.png" alt="Saurav Khanal"> -->
+                   <div class="devpic" id="boxx"> <img src="sauravv.png" alt="Saurav Khanal">
                     </div>
             </div>
         </div>
