--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </nav>
         </div>
         <div class="main">
-            <div id="loader"></div><nav>
+            <div id="loader"></div>
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
-            <div class="port""><h2>Portfolio</h2></div></nav>
+            <div class="port""><h2>Portfolio</h2></div>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
                 
