--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                    <div class="devpic" id="boxx"> <img src="sauravv.png" alt="Saurav Khanal">
+                    <div class="devpic" id="boxx"> <!--<img src="sauravv.png" alt="Saurav Khanal"> --><img src="bgg.png" alt="Saurav Khanal">
                     </div>
             </div>
         </div>
