--- a/services.html
+++ b/services.html
@@ -44,8 +44,8 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                   <div class="devpic" id="boxx"> <img src="sauravv.png" alt="Saurav Khanal">
-                    </div>
+                   <div class="devpic" id="boxx"><!--- <img src="sauravv.png" alt="Saurav Khanal">-->
+                 <img src="bgg.png" alt="Saurav Khanal">   </div>
             </div>
         </div>
     </div></div>
