--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                    <div class="devpic" id="boxx"><!--- <img src="sauravv.png" alt="Saurav Khanal">-->
-                 <img src="bgg.png" alt="Saurav Khanal">   </div>
+                 <img src="bggg.png" alt="Saurav Khanal">   </div>
             </div>
         </div>
     </div></div>
