--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
         <div class="main">
-            <div id="loader"></div>
+           <!-- <div id="loader"></div>-->
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
