--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div></div>
-<!--   <script>
+ <script>
   const roleSpan = document.getElementById('role');
   const roles = ["Developer", "IT Student", "Programmer", "Graphics Designer"];
   let roleIndex = 0;
@@ -73,7 +73,7 @@
 
   // Start typing roles
   typeRole();
-</script>-->
+</script>
     <script src="script.js"></script>
 </div>
 </body>
