--- a/intro.html
+++ b/intro.html
@@ -37,10 +37,10 @@
                 </p>
                 <h2>My skills</h2>
                 <div class="skillcontainer"></div>
-                <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
+                <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
                 <div class="skillitem">CSS:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill fifty"></div></div>
-                <div class="skillitem">javascript: <div class="skill fifty"></div></div>
-                <div class="skillitem">Php:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill t5"></div></div>
+                <div class="skillitem">javascript: &nbsp;&nbsp;<div class="skill fifty"></div></div>
+                <div class="skillitem">Php:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill t5"></div></div>
                 <div class="skillitem">Python:&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill thirty"></div></div>
                 <div class="skillitem">C language: <div class="skill ninty"></div></div>
                 <div class="skillitem">C++:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill seventy"></div></div>
