--- a/intro.html
+++ b/intro.html
@@ -37,8 +37,8 @@
                 </p>
                 <h2>My skills</h2>
                 <div class="skillcontainer"></div>
-                <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
-                <div class="skillitem">CSS:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill fifty"></div></div>
+                <div class="skillitem">HTML:<div class="skill"></div></div>
+                <div class="skillitem">CSS:<div class="skill fifty"></div></div>
                 <div class="skillitem">javascript:&nbsp;&nbsp;<div class="skill fifty"></div></div>
                 <div class="skillitem">Php:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill t5"></div></div>
                 <div class="skillitem">Python:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill thirty"></div></div>
@@ -47,6 +47,7 @@
                 <div class="skillitem">Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill .lten"></div></div>
                 <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
                 <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
+               <table><tr><div class="skill"></div></tr></table>
                 <div class="filling-box">
     
             <!-- TODO: Create a gallery for my project -->
