--- a/intro.html
+++ b/intro.html
@@ -47,7 +47,17 @@
                 <div class="skillitem">Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill .lten"></div></div>
                 <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
                 <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
-               <table><tr><div class="skill"></div></tr></table>
+               <table><tr><div class="skill"></div></tr>
+               <tr><div class="skill fifty"></div></tr>
+                   <tr><div class="skill t5"></div></tr>
+                   <tr><div class="skill thirty"></div></tr>
+                   <tr><div class="skill ninty"></div></tr>
+                   <tr><div class="skill seventy"></div></tr>
+                   <tr><div class="skill ten"></div></tr>
+                   <tr><div class="skill ten"></div></tr>
+               <tr><div class="skill ten"></div></tr>
+             
+               </table>
                 <div class="filling-box">
     
             <!-- TODO: Create a gallery for my project -->
