--- a/intro.html
+++ b/intro.html
@@ -48,12 +48,13 @@
                 <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
                 <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
                <table><tr><div class="skill"></div></tr>
+                   <tr><div class="skill fifty"></div></tr>
                <tr><div class="skill fifty"></div></tr>
                    <tr><div class="skill t5"></div></tr>
                    <tr><div class="skill thirty"></div></tr>
                    <tr><div class="skill ninty"></div></tr>
                    <tr><div class="skill seventy"></div></tr>
-                   <tr><div class="skill ten"></div></tr>
+                   <tr><div class="skill "></div></tr>
                    <tr><div class="skill ten"></div></tr>
                <tr><div class="skill ten"></div></tr>
              
