--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                    <div class="devpic" id="boxx"> <img src="IMG_20240317_185156.png" alt="Saurav Khanal"> <!--<img src="bggg.png" alt="Saurav Khanal">--->
+                    <div class="devpic" id="boxx"> <img src="1715344719231.png" alt="Saurav Khanal"> <!--<img src="bggg.png" alt="Saurav Khanal">--->
                     </div>
             </div>
         </div>
