--- a/intro.html
+++ b/intro.html
@@ -37,8 +37,20 @@
                 <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
                 </p>
                 <h2>My skills</h2>
-               
-        <div class="skillcontainer"></div>
+
+                <div class="skillcontainer">
+                    <table>
+  <tr>
+    <th>Skills</th>
+    <th>Level</th>
+  </tr>
+  <tr>
+    <td>HTML</td>
+    <td><div class="skill"></div></td>
+  </tr>
+                </div>
+                
+       <!-- <div class="skillcontainer"></div>
                 <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
                 <div class="skillitem">CSS:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill fifty"></div></div>
                 <div class="skillitem">javascript:&nbsp;&nbsp;<div class="skill fifty"></div></div>
@@ -48,7 +60,7 @@
                 <div class="skillitem">C++:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill seventy"></div></div>
                 <div class="skillitem">Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill .lten"></div></div>
                 <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
-                <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
+                <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>-->
           <!-- <div class="column">    <table><tr><div class="skill"></div></tr>
                    <tr><div class="skill fifty"></div></tr>
                <tr><div class="skill fifty"></div></tr>
