--- a/intro.html
+++ b/intro.html
@@ -48,6 +48,43 @@
     <td>HTML</td>
     <td><div class="skill"></div></td>
   </tr>
+                        <tr>
+    <td>CSS</td>
+    <td><div class="skill fifty"></td>
+  </tr>
+                        <tr>
+    <td>Javascript</td>
+    <td><div class="skill fifty"></div></td>
+  </tr>
+                        <tr>
+    <td>Php</td>
+    <td><div class="skill t5"></div></td>
+  </tr>
+                        <tr>
+    <td>Python</td>
+    <td><div class="skill ninty"></div></td>
+  </tr>
+                        <tr>
+    <td>C language:</td>
+    <td><div class="skill ninty"></div></td>
+  </tr>
+                        <tr>
+    <td>C++</td>
+    <td><div class="skill seventty"></div></td>
+  </tr>
+                        <tr>
+    <td>Java:</td>
+    <td><div class="skill .Item"></div></td>
+  </tr>
+                        <tr>
+    <td>MySQL</td>
+    <td><div class="skill ten"></div></td>
+  </tr>
+                        <tr>
+    <td>Jquery:</td>
+    <td><div class="skill ten"></div></td>
+  </tr>
+                        
                 </div>
                 
        <!-- <div class="skillcontainer"></div>
