--- a/intro.html
+++ b/intro.html
@@ -45,31 +45,31 @@
     <th>Level</th>
   </tr>
   <tr>
-    <td>HTML</td>
+    <td>HTML:</td>
     <td><div class="skill"></div></td>
   </tr>
                         <tr>
-    <td>CSS</td>
+    <td>CSS:</td>
     <td><div class="skill fifty"></td>
   </tr>
                         <tr>
-    <td>Javascript</td>
+    <td>Javascript:</td>
     <td><div class="skill fifty"></div></td>
   </tr>
                         <tr>
-    <td>Php</td>
+    <td>Php:</td>
     <td><div class="skill t5"></div></td>
   </tr>
                         <tr>
-    <td>Python</td>
+    <td>Python:</td>
     <td><div class="skill ninty"></div></td>
   </tr>
                         <tr>
-    <td>C language:</td>
+    <td>C:</td>
     <td><div class="skill ninty"></div></td>
   </tr>
                         <tr>
-    <td>C++</td>
+    <td>C++:</td>
     <td><div class="skill seventty"></div></td>
   </tr>
                         <tr>
@@ -77,7 +77,7 @@
     <td><div class="skill .Item"></div></td>
   </tr>
                         <tr>
-    <td>MySQL</td>
+    <td>MySQL:</td>
     <td><div class="skill ten"></div></td>
   </tr>
                         <tr>
