--- a/services.html
+++ b/services.html
@@ -37,9 +37,9 @@
                      <b>   HI its me</b>
                     </div>
                     <div class="name">Saurav</div>
-                    <div class="about"><b>Developer, Entrepreneur, Graphics Designer, Programmer</b></div>
-                    <div class="moreabout"><strong><i>Services like web development <br>graphics design, logo design<br>are available,don't forget <br> to contact me by clicking below<br> 
-                   </i> </strong>
+                    <div class="about"><b>Developer, Entrepreneur,<br> Graphics Designer, Programmer</b></div>
+                    <div class="moreabout"><i>Services like web development <br>graphics design, logo design<br>are available, don't forget <br> to contact me by clicking below<br> 
+                   </i> 
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
                         <button class="btn">Download CV</button></a>
