--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="1715344719231.png">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1354212710629545"
      crossorigin="anonymous"></script>
 </head>
