--- a/blog3.html
+++ b/blog3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable= no">
-    <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
+    <title>The World of Databases - The Backbone of Information Management</title>
     <link rel="stylesheet" href="blogstyle.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1354212710629545"
      crossorigin="anonymous"></script>
