--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
-            <div class="port""><h2>Portfolio</h2></div>
+            <div class="port"><h2>Portfolio</h2></div>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
                 
