--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
-            <h1>Blogs by Saurav - the legend <br></h1>
+            <h1 class="blgtitle" >Blogs by Saurav - the legend <br></h1>
             <div class="blogcontainer">
                 
                 <div class="blogitem">
