--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="infocontainer">
                 <div class="devinfo">
                     
-    <canvas id="logoCanvas" width="500" height="500"></canvas>
+   <!-- <canvas id="logoCanvas" width="500" height="500"></canvas>-->
                     
                     <div class="name">Hi! its Saurav</div>
                     <div class="hello">
