--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <div class="devinfo">
                     
    <!-- <canvas id="logoCanvas" width="500" height="500"></canvas>-->
+<video width="3200" height="2400" autoplay muted>
+    <source src="vid.mp4" type="video/mp4">
+    </video>
                     
                     <div class="name">Hi! its Saurav</div>
                     <div class="hello">
