--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
      crossorigin="anonymous"></script>
 </head>
 <body> 
+    <video autoplay muted loop id="myVideo">
+  <source src="vid.mp4" type="video/mp4">
+</video>
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
@@ -40,9 +43,7 @@
                 <div class="devinfo">
                     
    <!-- <canvas id="logoCanvas" width="500" height="500"></canvas>-->
-<video width="3200" height="2400" autoplay muted>
-    <source src="vid.mp4" type="video/mp4">
-    </video>
+
                     
                     <div class="name">Hi! its Saurav</div>
                     <div class="hello">
