--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
      crossorigin="anonymous"></script>
 </head>
 <body> 
-    <video autoplay muted loop id="myVideo">
+<!--     <video autoplay muted loop id="myVideo">
   <source src="vid.mp4" type="video/mp4">
-</video>
+</video> -->
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
