--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                    <div class="devpic" id="boxx"> <img src="1715344719231.png" alt="Saurav Khanal"> <!--<img src="bggg.png" alt="Saurav Khanal">--->
+<!--            was recent         <div class="devpic" id="boxx"> <img src="1715344719231.png" alt="Saurav Khanal"> <!--<img src="bggg.png" alt="Saurav Khanal">---> -->
                     </div>
             </div>
         </div>
