--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,18 @@
 <p> Artificial Intelligence (AI)</p>
                         <a href="blog2.html"> Read More </a>
                     </div></div>
+              <div class="blogitem">
+                <div class="blog-img">
+                        <img src="blog2.jpg" alt="blog">
+                    </div>
+                    <div class="blog-text">
+<span> 10 October 2023 / Ratan Tata</span>
+                       <a href="blog5.html" class="blog-title">Ratan Tata: A Visionary Leader's Journey</a> 
+<p> Ratan Tata</p>
+                        <a href="blog5.html"> Read More </a>
+                    </div></div>
+
+            
                         <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog3.jpg" alt="blog">
