--- a/blog5.html
+++ b/blog5.html
@@ -9,6 +9,15 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1354212710629545"
      crossorigin="anonymous"></script>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY6M9ZQDK3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZY6M9ZQDK3');
+</script>
 <body>
     <div class="container">
         <div class="sidebar sidebargo"> 
@@ -45,16 +54,16 @@
                  <main>
         <article>
             <h2>Ratan Tata: A Visionary Leader's Journey</h2>
-            <p>Ratan Tata, born on December 28, 1937, is one of India's most respected business leaders and philanthropists. He served as the chairman of Tata Sons and expanded the company's reach globally, making Tata Group a name recognized worldwide. Under his leadership, Tata Group acquired several major international companies, including Jaguar Land Rover and Corus Steel, establishing India's presence in the global business arena.</p>
+            <em>Ratan Tata, born on December 28, 1937, is one of India's most respected business leaders and philanthropists. He served as the chairman of Tata Sons and expanded the company's reach globally, making Tata Group a name recognized worldwide. Under his leadership, Tata Group acquired several major international companies, including Jaguar Land Rover and Corus Steel, establishing India's presence in the global business arena.</em>
 
-            <p>Known for his humility, foresight, and ethical business practices, Ratan Tata has always prioritized the welfare of employees and the community. His philanthropic work, through the Tata Trusts, has touched millions of lives across India, focusing on areas like healthcare, education, and rural development.</p>
+            <em>Known for his humility, foresight, and ethical business practices, Ratan Tata has always prioritized the welfare of employees and the community. His philanthropic work, through the Tata Trusts, has touched millions of lives across India, focusing on areas like healthcare, education, and rural development.</em>
 
-            <h2>Latest News: Tata’s Focus on Clean Energy</h2>
-            <p>Recently, Ratan Tata has emphasized the importance of sustainable and renewable energy. With the global focus shifting towards a greener future, Tata Group is investing in clean energy projects, ensuring a positive impact on the environment while meeting India's growing energy demands.</p>
+            <h3>Latest News: Tata’s Focus on Clean Energy</h3>
+            <em>Recently, Ratan Tata has emphasized the importance of sustainable and renewable energy. With the global focus shifting towards a greener future, Tata Group is investing in clean energy projects, ensuring a positive impact on the environment while meeting India's growing energy demands.</em>
 
-            <p>In a recent statement, Tata said, "Sustainability is no longer an option but a necessity. We must take every step to ensure that our future generations inherit a planet they can live in."</p>
+            <em>In a recent statement, Tata said, "Sustainability is no longer an option but a necessity. We must take every step to ensure that our future generations inherit a planet they can live in."</em>
 
-            <p>Stay tuned to this blog for more updates and insights on Ratan Tata's initiatives and contributions to business and society.</p>
+            <em>Stay tuned to this blog for more updates and insights on Ratan Tata's initiatives and contributions to business and society.</em>
         </article>
     </main>
 
