--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/x-icon" href="1715344719231.png">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1354212710629545"
      crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY6M9ZQDK3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZY6M9ZQDK3');
+</script>
 </head>
 <body> 
 <!--     <video autoplay muted loop id="myVideo">
