--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -42,6 +42,9 @@
             <div class="blogcontainer">
                 <h1>Life Manager App Privacy Policy</h1>
                 <div class="blogitem">
+                     <div class="blog-img">
+                        <img src="privacy.png" alt="blog">
+                    </div>
                     <div class="blog-text">
                         <main>
                             <article>
