--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -7,7 +7,6 @@
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="blogstyle.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1354212710629545" crossorigin="anonymous"></script>
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY6M9ZQDK3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -51,16 +50,16 @@
                                 <h2>1. Information We Collect</h2>
                                 <p>
                                     <strong>a. Information You Provide:</strong><br>
-                                    Personal Information: Name, email address, phone number, and profile picture.<br>
-                                    Health Data (Optional): Data like water intake, sleep tracking, and fitness activity.<br>
-                                    Financial Data (Optional): Budget and expense details you input into the app.<br>
-                                    Social Information (Optional): Friend connections, event details, and activity tracking.
+                                    - Personal Information: Name, email address, phone number, and profile picture.<br>
+                                    - Health Data (Optional): Data like water intake, sleep tracking, and fitness activity.<br>
+                                    - Financial Data (Optional): Budget and expense details you input into the app.<br>
+                                    - Social Information (Optional): Friend connections, event details, and activity tracking.
                                 </p>
-                                 <p>
+                                <p>
                                     <strong>b. Automatically Collected Information:</strong><br>
-                                    Device Information: Model, operating system, and unique identifiers (e.g., Android ID).<br>
-                                    Usage Data: App interactions, features used, and error reports.<br>
-                                    Location Data (Optional): Used for event reminders or location-based features.
+                                    - Device Information: Model, operating system, and unique identifiers (e.g., Android ID).<br>
+                                    - Usage Data: App interactions, features used, and error reports.<br>
+                                    - Location Data (Optional): Used for event reminders or location-based features.
                                 </p>
                                 <h2>2. How We Use Your Information</h2>
                                 <p>
@@ -83,11 +82,11 @@
                                 </p>
                                 <h2>4. Children’s Privacy</h2>
                                 <p>
-                                    Our app is not intended for children under the age of 13. We do not knowingly collect personal data from children. If you believe we have collected data from a child under 13, please contact us at <a href="mailto:lifo2888@gmail.com">lifo2888@gmail.com</a>.
+                                    Our app is not intended for children under the age of 13. We comply with the <strong>Children’s Online Privacy Protection Act (COPPA)</strong> and do not knowingly collect data from children. If you believe we have collected data from a child under 13, please contact us at <a href="mailto:lifo2888@gmail.com">lifo2888@gmail.com</a>.
                                 </p>
                                 <h2>5. Data Security</h2>
                                 <p>
-                                    We prioritize the security of your data and use industry-standard measures to protect it. However, no method of transmission or storage is completely secure, and we cannot guarantee absolute security.
+                                    We prioritize security and use industry-standard measures to protect your data. However, no method of transmission or storage is completely secure.
                                 </p>
                                 <h2>6. User Control and Choices</h2>
                                 <p>
@@ -100,19 +99,20 @@
                                 </p>
                                 <h2>7. Permissions</h2>
                                 <p>
-                                    The app may request the following permissions:
+                                    The app may request the following permissions for core functionality:
                                     <ul>
                                         <li><strong>Camera and Storage:</strong> For uploading profile pictures or attachments.</li>
                                         <li><strong>Location:</strong> For event reminders or location-based features.</li>
                                         <li><strong>Health Data:</strong> To track your fitness or wellness activities.</li>
-                                        <li><strong>Microphone:</strong> For voice notes or voice calls (if applicable).</li>
+                                        <li><strong>Microphone:</strong> For voice notes or voice calls.</li>
                                     </ul>
                                     You can manage permissions through your device settings.
                                 </p>
                                 <h2>8. Third-Party Services</h2>
                                 <p>
-                                    We may use third-party services (e.g., Firebase, Google Analytics) to enhance our app. These services may collect data in compliance with their own privacy policies. For more information, please refer to:
-                                    <a href="https://firebase.google.com/support/privacy">Firebase Privacy Policy</a>
+                                    We use third-party services (e.g., Firebase, Google Analytics) to enhance app functionality. These services may collect data under their own privacy policies.  
+                                    - <a href="https://firebase.google.com/support/privacy">Firebase Privacy Policy</a>  
+                                    - <a href="https://policies.google.com/privacy">Google Privacy Policy</a>
                                 </p>
                                 <h2>9. Changes to This Privacy Policy</h2>
                                 <p>
