--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -63,9 +63,24 @@
                                 </p>
                                 
                                 <h2>Explicit Consent Clause</h2>
-                                <p>
-                                    "Before collecting your personal data, we will ask for your explicit consent where required. You can manage or withdraw your consent at any time in the app settings."
-                                </p>
+<p>
+    "Before collecting your personal data, we will ask for your explicit consent where required. You can manage or withdraw your consent at any time in the app settings."
+</p>
+
+<h2>Data Retention Policy</h2>
+<p>
+    "We retain your data only as long as necessary for app functionality and legal compliance. If you request deletion, we will remove your data within [X days], unless required for security or legal purposes."
+</p>
+
+<h2>Do Not Sell My Personal Information</h2>
+<p>
+    "If you are a California resident, you have the right to request that we do not sell your personal information. Please contact us at <a href="mailto:lifo2888@gmail.com">lifo2888@gmail.com</a> to exercise this right."
+</p>
+
+<h2>Access Rights for California Residents</h2>
+<p>
+    "California residents can request access to the personal data we collect about them and request its deletion. You may contact us at <a href="mailto:lifo2888@gmail.com">lifo2888@gmail.com</a> for these requests."
+</p>
                                 
                                 <h2>2. How We Use Your Information</h2>
                                 <p>
