--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -69,7 +69,7 @@
 
 <h2>Data Retention Policy</h2>
 <p>
-    "We retain your data only as long as necessary for app functionality and legal compliance. If you request deletion, we will remove your data within [6 months], unless required for security or legal purposes."
+    "We retain your data only as long as necessary for app functionality and legal compliance. If you request deletion, we will remove your data within 6 months, unless required for security or legal purposes."
 </p>
 
 <h2>Do Not Sell My Personal Information</h2>
