--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -234,10 +234,10 @@
                                     - Usage Data: App interactions, features used, and error reports.<br>
                                     - Location Data (Optional): Used for event reminders or location-based features.
                                 </p>
-                                <h2>Explicit Consent Clause</h2>
+<!--                                 <h2>Explicit Consent Clause</h2>
                                 <p>
                                     "Before collecting your personal data, we will ask for your explicit consent where required. You can manage or withdraw your consent at any time in the app settings."
-                                </p>
+                                </p> -->
                                 <h2>Data Retention Policy</h2>
                                 <p>
                                     "We retain your data only as long as necessary for app functionality and legal compliance. If you request deletion, we will remove your data within 6 months, unless required for security or legal purposes."
