--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -209,7 +209,7 @@
                 <h1>Life Manager App Privacy Policy</h1>
                 <div class="blogitem">
                      <div class="blog-img">
-                        <img src="privacy.png" alt="blog">
+                        <img src="privacy1.png" alt="blog">
                     </div>
                     <div class="blog-text">
                         <main>
