--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -370,6 +370,9 @@
                                     Email: <a href="mailto:lifo2888@gmail.com">lifo2888@gmail.com</a>
                                 </p>
                             </article>
+                            <h3>Last Updated</h3>
+                            <span>03/14/2025</span>
+                            
                         </main>
                     </div>
                 </div>
