--- a/lifemanagerapp-privacy-policy.html
+++ b/lifemanagerapp-privacy-policy.html
@@ -219,7 +219,7 @@
                                     <strong>a. Information You Provide:</strong><br>
                                     - Personal Information: Name, email address, phone number, and profile picture.<br>
 <!--                                     - Health Data (Optional): Data like water intake, sleep tracking, and fitness activity.<br> -->
-                                    - Financial Data (Optional): Budget and expense details you input into the app.<br>
+<!--                                     - Financial Data (Optional): Budget and expense details you input into the app.<br> -->
                                     - Social Information (Optional): Friend connections, event details, and activity tracking.
                                 </p>
                                 <p>
@@ -253,7 +253,7 @@
                                     We use your information to:
                                     <ul>
                                         <li>Personalize your experience and provide tailored recommendations.</li>
-                                        <li>Enable features such as task management, and personal finance management.</li>
+                                        <li>Enable features such as task management.</li>
                                         <li>Improve app functionality and fix bugs.</li>
                                         <li>Send notifications for events, tasks, or reminders (with your permission).</li>
                                     </ul>
@@ -371,7 +371,7 @@
                                 </p>
                             </article>
                             <h3>Last Updated</h3>
-                            <span>03/14/2025</span>
+                            <span>03/19/2025</span>
                             
                         </main>
                     </div>
