--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                    
                     <div class="moreabout"><b><i>Thanks for visiting my Portfolio.<br> If you are interested to know more on my background,<br> you are on the right platform.
                     </i></b> </div>
-                    <div class="buttons"><a href="/cv of saurav.pdf">
+                    <div class="buttons"><a href="/saurav flutter developer cv.pdf">
                         <button class="btn">Download CV</button></a>
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
