--- a/blog2.html
+++ b/blog2.html
@@ -60,8 +60,8 @@
 - <em>Over the decades:</em> Milestones such as the development of expert systems and the advent of machine learning contribute to the evolution of AI.<br>
 
 <h3>Understanding the Core Concepts<br></h3>
-- **Machine Learning:** A subset of AI enabling systems to learn and improve from experience.<br>
-- **Deep Learning:** Mimicking the human brain's neural networks, allowing for advanced pattern recognition.<br>
+- Machine Learning: A subset of AI enabling systems to learn and improve from experience.<br>
+- Deep Learning: Mimicking the human brain's neural networks, allowing for advanced pattern recognition.<br>
 
 <h3>The Role of AI in Everyday Life<br></h3>
 - AI-driven recommendations on streaming platforms personalize user experiences.<br>
