--- a/blog4.html
+++ b/blog4.html
@@ -56,23 +56,23 @@
 - Discuss the impact of Big Data on decision-making, innovation, and insights across various industries.<br>
 
 <h3>The Four Vs of Big Data<br></h3>
-- **Volume:** Explore the sheer magnitude of data generated daily and the challenges in processing and storing it.<br>
-- **Velocity:** Examine the speed at which data is generated, requiring real-time processing for timely insights.<br>
-- **Variety:** Discuss the diverse types of data, from structured to unstructured, and the need for flexible processing methods.<br>
-- **Veracity:** Address the reliability and trustworthiness of data, emphasizing the importance of data quality.<br>
+- Volume: Explore the sheer magnitude of data generated daily and the challenges in processing and storing it.<br>
+- Velocity: Examine the speed at which data is generated, requiring real-time processing for timely insights.<br>
+- Variety: Discuss the diverse types of data, from structured to unstructured, and the need for flexible processing methods.<br>
+- Veracity: Address the reliability and trustworthiness of data, emphasizing the importance of data quality.<br>
 
 <h3>Key Technologies in the Big Data Ecosystem<br></h3>
-- **Hadoop:** Delve into the open-source framework for distributed storage and processing of large data sets.<br>
-- **Spark:** Explore the fast and general-purpose cluster-computing framework for Big Data processing.<br>
-- **NoSQL Databases:** Discuss their role in handling unstructured and semi-structured data efficiently.<br>
+- Hadoop: Delve into the open-source framework for distributed storage and processing of large data sets.<br>
+- Spark: Explore the fast and general-purpose cluster-computing framework for Big Data processing.<br>
+- NoSQL Databases: Discuss their role in handling unstructured and semi-structured data efficiently.<br>
 
 <h3>Data Processing Paradigms<br></h3>
-- **Batch Processing:** Analyzing large volumes of data at scheduled intervals for insights.<br>
-- **Stream Processing:** Real-time analysis of data as it is generated, enabling immediate decision-making.<br>
+- **Batch Processing: Analyzing large volumes of data at scheduled intervals for insights.<br>
+- **Stream Processing: Real-time analysis of data as it is generated, enabling immediate decision-making.<br>
 <h3>Use Cases Across Industries</h3><br>
-- **Healthcare:** Analyzing patient data for personalized treatment plans.<br>
-- **Finance:** Detecting fraud and optimizing investment strategies through predictive analytics.<br>
-- **Retail:** Enhancing customer experiences through targeted recommendations and inventory management.<br>
+- Healthcare: Analyzing patient data for personalized treatment plans.<br>
+- Finance: Detecting fraud and optimizing investment strategies through predictive analytics.<br>
+- Retail: Enhancing customer experiences through targeted recommendations and inventory management.<br>
 
 <h3>Challenges and Future Trends<br></h3>
 - Discuss challenges such as data security, privacy concerns, and the scarcity of skilled professionals in the Big Data field.<br>
